--- a/index.html
+++ b/index.html
@@ -1,229 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>Pokédex</title>
-    <link rel="stylesheet" href="styles.css" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <style>
-      .card {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
-        transition: box-shadow 0.3s ease;
-      }
-      .card-background {
-        background-image: url("./imagens/pp_504x498-pad_600x600_f8f8f8.u3-removebg-preview.png");
-        background-position: center;
-        border-radius: 2%;
-      }
-      .card:hover {
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
-        transform: scale(1.05);
-      }
-      .steel {
-        background-color: #b8b8d0;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Pokédex</title>
+  <link rel="stylesheet" href="styles.css" />
 
-      .grass {
-        background-color: #defde0;
-      }
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    .card {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+      transition: box-shadow 0.3s ease;
+    }
 
-      .fire {
-        background-color: #f05030;
-      }
+    .card-background {
+      background-image: url("./imagens/pp_504x498-pad_600x600_f8f8f8.u3-removebg-preview.png");
+      background-position: center;
+      border-radius: 2%;
+    }
 
-      .grass {
-        background-color: #78c850;
-      }
+    .card:hover {
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
+      transform: scale(1.05);
+    }
 
-      .electric {
-        background-color: #f8d030;
-      }
+    .steel {
+      background-color: #b8b8d0;
+    }
 
-      .water {
-        background-color: #6890f0;
-      }
+    .grass {
+      background-color: #defde0;
+    }
 
-      .ice {
-        background-color: #98d8d8;
-      }
+    .fire {
+      background-color: #f05030;
+    }
 
-      .ground {
-        background-color: #e0c068;
-      }
+    .grass {
+      background-color: #78c850;
+    }
 
-      .rock {
-        background-color: #b8a038;
-      }
+    .electric {
+      background-color: #f8d030;
+    }
 
-      .fairy {
-        background-color: #fceaff;
-      }
+    .water {
+      background-color: #6890f0;
+    }
 
-      .poison {
-        background-color: #a040a0;
-      }
+    .ice {
+      background-color: #98d8d8;
+    }
 
-      .bug {
-        background-color: #68a090;
-      }
+    .ground {
+      background-color: #e0c068;
+    }
 
-      .dragon {
-        background-color: #7038f8;
-      }
+    .rock {
+      background-color: #b8a038;
+    }
 
-      .psychic {
-        background-color: #f85888;
-      }
+    .fairy {
+      background-color: #fceaff;
+    }
 
-      .flying {
-        background-color: #a890f0;
-      }
+    .poison {
+      background-color: #a040a0;
+    }
 
-      .fighting {
-        background-color: #903028;
-      }
+    .bug {
+      background-color: #68a090;
+    }
 
-      .ghost {
-        background-color: #705898;
-      }
+    .dragon {
+      background-color: #7038f8;
+    }
 
-      .normal {
-        background-color: #a8a878;
-      }
+    .psychic {
+      background-color: #f85888;
+    }
 
-      .dark {
-        background-color: #705848;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Barra de Navegação -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-      <a class="navbar-brand" href="#">
-        <img src="./imagens/pokeball.png.png" alt="Pokeball" />
-        <img
-          src="./imagens/download-removebg-preview.png.png"
-          alt="Pokédex Logo"
-          class="logo"
-        />
-        <img
-          src="./imagens/f01b52cb89c607a7358d54b112ffe93e-removebg-preview.png"
-        />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
+    .flying {
+      background-color: #a890f0;
+    }
+
+    .fighting {
+      background-color: #903028;
+    }
+
+    .ghost {
+      background-color: #705898;
+    }
+
+    .normal {
+      background-color: #a8a878;
+    }
+
+    .dark {
+      background-color: #705848;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Barra de Navegação -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+    <a class="navbar-brand" href="#">
+      <img src="./imagens/pokeball.png.png" alt="Pokeball" />
+      <img src="./imagens/download-removebg-preview.png.png" alt="Pokédex Logo" class="logo" />
+      <img src="./imagens/f01b52cb89c607a7358d54b112ffe93e-removebg-preview.png" />
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <!-- Adicione aqui os links do menu, se necessário -->
+    </div>
+    <!-- Barra de Pesquisa -->
+    <div class="ml-auto my-2 my-lg-0 search-bar">
+      <input class="form-control mr-sm-2 search-input" type="search" placeholder="Pesquisar Pokémon..."
+        aria-label="Pesquisar" id="searchInput" />
+      <button class="btn btn-primary my-2 my-sm-0 search-button" onclick="searchPokemon()">
+        Pesquisar
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <!-- Adicione aqui os links do menu, se necessário -->
-      </div>
-      <!-- Barra de Pesquisa -->
-      <div class="ml-auto my-2 my-lg-0 search-bar">
-        <input
-          class="form-control mr-sm-2 search-input"
-          type="search"
-          placeholder="Pesquisar Pokémon..."
-          aria-label="Pesquisar"
-          id="searchInput"
-        />
-        <button
-          class="btn btn-primary my-2 my-sm-0 search-button"
-          onclick="searchPokemon()"
-        >
-          Pesquisar
-        </button>
-      </div>
-    </nav>
+    </div>
+  </nav>
 
-    <div class="container mt-5">
-      <!-- Lista de Pokémons -->
-      <div class="row" id="pokemon-list">
-        <!-- A lista de Pokémons será exibida aqui -->
-      </div>
-      <!-- Botão "Ver Mais" -->
-      <button
-        id="loadMoreButton"
-        class="btn btn-primary btn-sm mt-3 mx-auto d-block"
-      >
-        Ver Mais
-      </button>
-      <button onclick="scrollToTop()">Topo</button>
-      <!-- Detalhes do Pokémon -->
-      <div
-        class="modal fade"
-        id="pokemonDetailsModal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="pokemonDetailsModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="pokemonDetailsModalLabel">
-                Detalhes do Pokémon
-              </h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body" id="pokemon-details">
-              <!-- Os detalhes do Pokémon serão exibidos aqui -->
-            </div>
+  <div class="container mt-5">
+    <!-- Lista de Pokémons -->
+    <div class="row" id="pokemon-list">
+      <!-- A lista de Pokémons será exibida aqui -->
+    </div>
+    <!-- Botão "Ver Mais" -->
+    <button id="loadMoreButton" class="btn btn-primary btn-sm mt-3 mx-auto d-block">
+      Ver Mais
+    </button>
+    <button onclick="scrollToTop()">Topo</button>
+    <!-- Detalhes do Pokémon -->
+    <div class="modal fade" id="pokemonDetailsModal" tabindex="-1" role="dialog"
+      aria-labelledby="pokemonDetailsModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="pokemonDetailsModalLabel">
+              Detalhes do Pokémon
+            </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="pokemon-details">
+            <!-- Os detalhes do Pokémon serão exibidos aqui -->
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Bootstrap JS e dependências -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const pokemonList = document.getElementById("pokemon-list");
-        let offset = 0;
-        const limit = 20;
+  <!-- Bootstrap JS e dependências -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const pokemonList = document.getElementById("pokemon-list");
+      let offset = 0;
+      const limit = 20;
 
-        // Função para carregar os Pokémon
-        function loadPokemon() {
-          // Fetch para obter a lista de Pokémon com base no offset e limit
-          fetch(
-            `https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`
-          )
-            .then((response) => response.json())
-            .then((data) => {
-              const pokemonData = data.results;
+      // Função para carregar os Pokémon
+      function loadPokemon() {
+        // Fetch para obter a lista de Pokémon com base no offset e limit
+        fetch(
+          `https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`
+        )
+          .then((response) => response.json())
+          .then((data) => {
+            const pokemonData = data.results;
 
-              pokemonData.forEach(async (pokemon) => {
-                const card = document.createElement("div");
-                card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
+            pokemonData.forEach(async (pokemon) => {
+              const card = document.createElement("div");
+              card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
 
-                const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
-                const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
-                const pokemonType = await fetch(pokemon.url)
-                  .then((response) => response.json())
-                  .then((pokemon) => pokemon.types[0].type.name);
+              const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
+              const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
+              const pokemonType = await fetch(pokemon.url)
+                .then((response) => response.json())
+                .then((pokemon) => pokemon.types[0].type.name);
 
-                card.innerHTML = `
+              card.innerHTML = `
                         <div class="card ${pokemonType}">
                             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png" class="card-img-top" alt="${pokemon.name}">
                             <div class="card-body">
@@ -233,31 +197,36 @@
                         </div>
                     `;
 
-                pokemonList.appendChild(card);
-              });
-
-              // Incrementa o offset para a próxima carga
-              offset += limit;
-            })
-            .catch((error) => {
-              console.error("Erro ao carregar mais Pokémon:", error);
+              pokemonList.appendChild(card);
             });
-        }
 
-        // Inicializa a carga dos primeiros Pokémon
-        loadPokemon();
+            // Incrementa o offset para a próxima carga
+            offset += limit;
+          })
+          .catch((error) => {
+            console.error("Erro ao carregar mais Pokémon:", error);
+          });
+      }
 
-        // Adiciona um evento de clique ao botão "Ver Mais"
-        document
-          .getElementById("loadMoreButton")
-          .addEventListener("click", loadPokemon);
+      // Inicializa a carga dos primeiros Pokémon
+      loadPokemon();
+
+      // Adiciona um evento de clique ao botão "Ver Mais"
+      document
+        .getElementById("loadMoreButton")
+        .addEventListener("click", loadPokemon);
+    });
+    const scrollToTop = () => {
+      window.scrollTo({
+        top: 0,
+        behavior: "smooth",
       });
-      const scrollToTop = () => {
-        window.scrollTo({
-          top: 0,
-          behavior: "smooth",
-        });
-      };
-    </script>
-  </body>
+    };
+//verificação em teste
+    function searchPokemon() {
+
+    }
+  </script>
+</body>
+
 </html>
