--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -1,164 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Detalhes do Pokémon</title>
-  <link rel="stylesheet" href="details.css">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  
-  <!-- Seu CSS personalizado pode ser adicionado aqui -->
-
-  <style>
-    
-  </style>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Detalhes do Pokémon</title>
+    <link rel="stylesheet" href="./css/details.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.5/lottie.min.js"></script>
 </head>
-
 <body>
-  <!-- Barra de Navegação -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-    <a class="navbar-brand" href="./index.html">
-      <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
-      <img src="./imagens/giphy.gif" alt="Pokédex Logo" class="galera" />
-    </a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <!-- Adicione aqui os links do menu, se necessário -->
+    <!-- Barra de Navegação -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+        <a class="navbar-brand" href="./index.html">
+            <img src="./imagens/pokedex_kanto_by_thekevmeister_dcis2l3-fullview-removebg-preview.png" alt="Pokeball" />
+            <img src="./imagens/giphy.gif" alt="Pokédex Logo" class="galera" />
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Adicione aqui os links do menu, se necessário -->
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <!-- Detalhes do Pokémon -->
+        <div id="pokemon-details" class="text-center">
+            <!-- As informações do Pokémon serão exibidas aqui -->
+        </div>
+        <!-- Botões de Navegação -->
+        <div class="mt-3">
+            <button id="prevButton" class="btn btn-primary">Anterior</button>
+            <button id="nextButton" class="btn btn-primary">Próximo</button>
+        </div>
     </div>
-    <div class="ml-auto my-2 my-lg-0">
-      <div class="search-bar">
-        <input class="form-control mr-sm-2 search-input" type="search" placeholder="Pesquisar Pokémon..."
-          aria-label="Pesquisar" id="searchInput" />
-        <button class="btn btn-primary my-2 my-sm-0 search-button" onclick="searchPokemon()">
-          Pesquisar
-        </button>
-      </div>
-    </div>
-  </nav>
 
-  <div class="container mt-5">
-    <!-- Detalhes do Pokémon -->
-    <div id="pokemon-details" class="text-center">
-      <!-- As informações do Pokémon serão exibidas aqui -->
-    </div>
-  </div>
+    <!-- Bootstrap JS e dependências -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Bootstrap JS e dependências -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Obter o parâmetro 'url' da URL
+            const urlParams = new URLSearchParams(window.location.search);
+            let pokemonIndex = parseInt(urlParams.get("url").split("/").slice(-2, -1)[0]);
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      // Obter o parâmetro 'url' da URL
-      const urlParams = new URLSearchParams(window.location.search);
-      const pokemonUrl = urlParams.get("url");
+            // Função para mostrar detalhes do Pokémon
+            function showPokemonDetails() {
+                const pokemonDetailsContainer = document.getElementById("pokemon-details");
 
-      // Função para mostrar detalhes do Pokémon
-      fetch(pokemonUrl)
-        .then((response) => response.json())
-        .then((pokemon) => {
-          const pokemonDetailsContainer = document.getElementById("pokemon-details");
+                fetch(`https://pokeapi.co/api/v2/pokemon/${pokemonIndex}/`)
+                    .then((response) => response.json())
+                    .then((pokemon) => {
+                        const formattedNumber = String(pokemon.id).padStart(3, "0");
 
-          // Obtém as versões da espécie do Pokémon
-          const speciesUrl = pokemon.species.url;
-          fetch(speciesUrl)
-            .then((response) => response.json())
-            .then((species) => {
-              const regionText = species.generation.name
-                ? `<p><strong>Geração:</strong> ${species.generation.name}</p>`
-                : "";
+                        // Obtém as versões da espécie do Pokémon
+                        fetch(`https://pokeapi.co/api/v2/pokemon-species/${pokemonIndex}/`)
+                            .then((response) => response.json())
+                            .then((species) => {
+                                const regionText = species.generation.name
+                                    ? `<p><strong>Geração:</strong> ${species.generation.name}</p>`
+                                    : "";
 
-              // Obtém a descrição do Pokémon
-              const flavorTextEntries = species.flavor_text_entries;
-              const description = flavorTextEntries.find(
-                (entry) => entry.language.name === "en"
-              );
+                                // Obtém a descrição do Pokémon
+                                const flavorTextEntries = species.flavor_text_entries;
+                                const description = flavorTextEntries.find(
+                                    (entry) => entry.language.name === "en"
+                                );
 
-              const descriptionText = description
-                ? `<p><strong>Descrição:</strong> ${description.flavor_text}</p>`
-                : "";
+                                const descriptionText = description
+                                    ? `<p><strong>Descrição:</strong> ${description.flavor_text}</p>`
+                                    : "";
 
-              // Obtém as fraquezas do Pokémon
-              const weaknessesPromises = pokemon.types.map((type) => {
-                const typeUrl = type.type.url;
-                return fetch(typeUrl)
-                  .then((response) => response.json())
-                  .then((typeDetails) =>
-                    typeDetails.damage_relations.double_damage_from.map(
-                      (weakness) => weakness.name
-                    )
-                  )
-                  .catch((error) => {
-                    console.error("Erro ao obter fraquezas:", error);
-                    return [];
-                  });
-              });
+                                // Obtém as fraquezas do Pokémon
+                                const weaknessesPromises = pokemon.types.map((type) => {
+                                    const typeUrl = type.type.url;
+                                    return fetch(typeUrl)
+                                        .then((response) => response.json())
+                                        .then((typeDetails) =>
+                                            typeDetails.damage_relations.double_damage_from.map(
+                                                (weakness) => weakness.name
+                                            )
+                                        )
+                                        .catch((error) => {
+                                            console.error("Erro ao obter fraquezas:", error);
+                                            return [];
+                                        });
+                                });
 
-              // Após todas as requisições estarem completas, exibe os detalhes
-              Promise.all(weaknessesPromises)
-                .then((allWeaknesses) => {
-                  // Flatten the array of weaknesses
-                  const uniqueWeaknesses = [...new Set(allWeaknesses.flat())];
+                                // Após todas as requisições estarem completas, exibe os detalhes
+                                Promise.all(weaknessesPromises)
+                                    .then((allWeaknesses) => {
+                                        // Flatten the array of weaknesses
+                                        const uniqueWeaknesses = [...new Set(allWeaknesses.flat())];
 
-                  const weaknessesText =
-                    uniqueWeaknesses.length > 0
-                      ? `<p><strong>Fraquezas:</strong> ${uniqueWeaknesses.join(", ")}</p>`
-                      : "";
+                                        const weaknessesText =
+                                            uniqueWeaknesses.length > 0
+                                                ? `<p><strong>Fraquezas:</strong> ${uniqueWeaknesses.join(
+                                                    ", "
+                                                )}</p>`
+                                                : "";
 
-                  pokemonDetailsContainer.innerHTML = `
-                  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemon.id
-                    }.png" class="img-fluid" alt="${pokemon.name}">
-                  <div class="pokemon-info">
-                    <h5 class="card-title">Detalhes do Pokémon - ${pokemon.name}</h5>
-                    <p><strong>Número:</strong> ${pokemon.id}</p>
-                    ${regionText}
-                    ${descriptionText}
-                    <p><strong>Tipo:</strong> ${pokemon.types.map((type) => type.type.name).join(", ")}</p>
-                    <p><strong>Habilidades:</strong> ${pokemon.abilities.map((ability) => ability.ability.name).join(", ")}</p>
-                    <p><strong>Estatísticas:</strong></p>
-                    <ul>
-                      ${pokemon.stats.map(
-                      (stat) => `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
-                    ).join("")}
-                    </ul>
-                    ${weaknessesText}
-                  </div>
-                `;
-                })
-                .catch((error) => {
-                  console.error("Erro ao obter fraquezas:", error);
-                });
-            })
-            .catch((error) => {
-              console.error("Erro ao obter espécie do Pokémon:", error);
+                                        const pokemonDetails = `
+                                            <div id="pokemon-image-section" class="animated">
+                                                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/${pokemon.id}.svg" class="img-fluid" alt="${pokemon.name}">
+                                            </div>
+                                            <div class="pokemon-info">
+                                                <h5 class="card-title">Detalhes do Pokémon - ${pokemon.name}</h5>
+                                                <p><strong>Número:</strong> ${formattedNumber}</p>
+                                                ${regionText}
+                                                ${descriptionText}
+                                                <p><strong>Tipo:</strong> ${pokemon.types
+                                                    .map((type) => type.type.name)
+                                                    .join(", ")}</p>
+                                                <p><strong>Habilidades:</strong> ${pokemon.abilities
+                                                    .map((ability) => ability.ability.name)
+                                                    .join(", ")}</p>
+                                                <p><strong>Estatísticas:</strong></p>
+                                                <ul>
+                                                    ${pokemon.stats
+                                                        .map(
+                                                            (stat) =>
+                                                                `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
+                                                        )
+                                                        .join("")}
+                                                </ul>
+                                                ${weaknessesText}
+                                            </div>
+                                        `;
+
+                                        pokemonDetailsContainer.innerHTML = pokemonDetails;
+                                    })
+                                    .catch((error) => {
+                                        console.error("Erro ao obter fraquezas:", error);
+                                    });
+                            })
+                            .catch((error) => {
+                                console.error("Erro ao obter espécie do Pokémon:", error);
+                            });
+                    })
+                    .catch((error) => {
+                        console.error("Erro ao obter detalhes do Pokémon:", error);
+                    });
+            }
+
+            // Exibir detalhes do Pokémon inicial
+            showPokemonDetails();
+
+            // Adicionar evento de clique para o botão Anterior
+            document.getElementById("prevButton").addEventListener("click", function () {
+                pokemonIndex = Math.max(pokemonIndex - 1, 1);
+                showPokemonDetails();
             });
-        })
-        .catch((error) => {
-          console.error("Erro ao obter detalhes do Pokémon:", error);
+
+            // Adicionar evento de clique para o botão Próximo
+            document.getElementById("nextButton").addEventListener("click", function () {
+                pokemonIndex = Math.min(pokemonIndex + 1, 898); // Considerando o total de Pokémon até a geração 8
+                showPokemonDetails();
+            });
         });
-    });
-
-    // Função para pesquisar Pokémon
-    function searchPokemon() {
-      const searchInput = document.getElementById("searchInput").value.toLowerCase();
-
-      // Obtem todos os cards de Pokémon
-      const pokemonCards = document.querySelectorAll(".card");
-
-      // Percorre os cards para ocultar/mostrar com base na pesquisa
-      pokemonCards.forEach((card) => {
-        const pokemonName = card.querySelector(".card-title").textContent.toLowerCase();
-        const pokemonNumber = card.querySelector(".card-title").textContent.split(" - ")[0].slice(1);
-
-        if (pokemonName.includes(searchInput) || pokemonNumber.includes(searchInput)) {
-          card.style.display = "block";
-        } else {
-          card.style.display = "none";
-        }
-      });
-    }
-  </script>
+    </script>
 </body>
-
 </html>
